--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
           <tr><td colspan="5">Account</td></tr>
           <tr>
             <td><input type="checkbox" disabled="true" checked="true"/></td>
-            <td><input type="number" value="0" min="0" max="50"/></td>
+            <td><input type="number" value="0" min="0" max="50" onClick="this.select();"/></td>
             <td><img src="https://wiki.guildwars2.com/images/9/94/Magic_Find_%28account_bonus%29.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Account_bonus">Account Bonus</a></td>
             <td>Typisch: 0-36%+</td>
           </tr>
           <tr>
             <td><input type="checkbox" disabled="true" checked="true"/></td>
-            <td><input type="number" value="0" min="0" max="300"/></td>
+            <td><input type="number" value="0" min="0" max="300" onClick="this.select();"/></td>
             <td><img src="https://wiki.guildwars2.com/images/8/83/Essence_of_Luck_%28exotic%29.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Luck">Luck</a></td>
             <td>0-300%</td>
