--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
             <td></td>
           </tr>
         </tbody>
-        <tfoot>
+      </table>
+
+      <table id="footer" class="bg-secondary text-light">
+        <tbody>
           <tr>
             <td class="col-1"></td>
             <td class="col-2" id="sumValue"></td>
@@ -166,7 +169,7 @@
             <td class="col-4">Summe</td>
             <td class="col-4">Kein Mehrwert über 750%!</td>
           </tr>
-        </tfoot>
+        </tbody>
       </table>
   </body>
 </html>
