--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
     <title>Magic Find Checkliste</title>
   </head>
   <body onload="onLoad()">
+    <div id="header">
+    <h1>Magic Find Checklist</h1>
 
-    <h1>Magic Find Checkliste</h1>
-
-    <p>Interaktive Version basierend auf der <a href="https://wiki.guildwars2.com/wiki/Magic_Find#Maximizing_magic_find">Liste im Wiki</a></p>
+    <p>Interactive version based of the <a href="https://wiki.guildwars2.com/wiki/Magic_Find#Maximizing_magic_find">wiki list</a>.</p>
 
     <p class="info">
       <u>
-        <b>Wichtige Info:</b>
+        <b>Important note for Lunar New Year 2023:</b>
       </u>
       <br>
-      Magic Find hat seit 28.02.2022 einen Maximalwert von 750%! [
-    <a href="https://wiki.guildwars2.com/wiki/Game_updates/2022-02-28#General_2">Quelle</a>
+      Magic Find is capped to 750% since 2022-02-28 [
+    <a href="https://wiki.guildwars2.com/wiki/Game_updates/2022-02-28#General_2">source</a>
     ]
   </p>
-  <p>Ihr könnt euch wahrscheinlich einge teure, wie den "Black Lion Booster" oder umständliche, wie "Enlightenment" in der Liste sparen!</p>
+  <p>You might be able to save yourself from purchasing expensive Boosters like "Black Lion Booster" or getting tedious buffs like "Enlightenment"!</p>
+</div>
 
-    <table class="table table-striped">
+    <table id="mainTable" class="table table-striped">
         <thead>
           <tr>
             <th scope="col" class="col-1"></th>
-            <th scope="col" class="col-2">Wert</th>
+            <th scope="col" class="col">Value</th>
             <th scope="col" class="col-1"></th>
-            <th scope="col" class="col-4">Bezeichnung</th>
-            <th scope="col" class="col-4">Info</th>
+            <th scope="col" class="col">Description</th>
+            <th scope="col" class="col">Info</th>
           </tr>
         </thead>
         <tbody id="tableBody">
@@ -44,7 +45,7 @@
             <td><input type="number" value="0" min="0" max="50" onClick="this.select();"/></td>
             <td><img src="https://wiki.guildwars2.com/images/9/94/Magic_Find_%28account_bonus%29.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Account_bonus">Account Bonus</a></td>
-            <td>Typisch: 0-36%+</td>
+            <td>Typically: 0-36%+</td>
           </tr>
           <tr>
             <td><input type="checkbox" disabled="true" checked="true"/></td>
@@ -59,37 +60,37 @@
             <td class="value">15</td>
             <td><img src="https://wiki.guildwars2.com/images/f/f1/Memories_of_Home.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Memories_of_Home">Memories of Home</a></td>
-            <td>Akiv während Festival</td>
+            <td>Active during Lunar New Year festival</td>
           </tr>
-          <tr><td colspan="5">Vorbereitungen</td></tr>
+          <tr><td colspan="5">Preparation</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">20</td>
             <td><img src="https://wiki.guildwars2.com/images/1/11/Magical_Infusion.png"/><img src="https://wiki.guildwars2.com/images/9/9c/Otter%27s_Blessing_Enrichment.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Magical_Enrichment">Magical Enrichment</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Otter%27s_Blessing_Enrichment">Otter's Blessing Enrichment</a></td>
-            <td>Anreicherungsslot (Amulett)</td>
+            <td>Enrichtment (Amulet)</td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">10</td>
             <td><img src="https://wiki.guildwars2.com/images/e/ee/Endless_Toymaker%27s_Tonic.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Guild_Magic_Find">Guild Magic Find</a></td>
-            <td>Gildenhalle: Taverne</td>
+            <td>Guild hall: Bartender in Guild Tavern</td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">10</td>
             <td><img src="https://wiki.guildwars2.com/images/f/fa/Enlightenment.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Enlightenment">Enlightenment</a></td>
-            <td>Buff von einem Herz in der Provinz Seitung</td>
+            <td>Buff from completing <a href="https://wiki.guildwars2.com/wiki/Monastery_Training">Monastery Training</a> Renown Heart</td>
           </tr>
-          <tr><td colspan="5">Kartenboni</td></tr>
+          <tr><td colspan="5">Map Event Bonus</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">200</td>
             <td><img src="https://wiki.guildwars2.com/images/7/7f/Perseverance.png"/><img src="https://wiki.guildwars2.com/images/7/74/Hero_of_the_Wastes.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Perseverance">Perseverance</a> &<br/><a href="https://wiki.guildwars2.com/wiki/Hero_of_the_Wastes">Hero of the Wastes</a></td>
-            <td>Silberwüste Buffs<br/>5 x 30% + 50%</td>
+            <td>Silverwastes Buffs<br/>5 x 30% + 50%</td>
           </tr>
           <tr><td colspan="5">Banner</td></tr>
           <tr>
@@ -106,29 +107,29 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Spirit_Banner_Boost">Spirit Banner Boost</a></td>
             <td>Spirit Banner</td>
           </tr>
-          <tr><td colspan="5">Verbrauchgegenstände (günstig, handelbar)</td></tr>
+          <tr><td colspan="5">Consumables (available at Trading Post)</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">40</td>
             <td><img src="https://wiki.guildwars2.com/images/e/eb/Longevity_Noodles.png"/><img src="https://wiki.guildwars2.com/images/8/8a/Chocolate_Omnomberry_Cream.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Longevity_Noodles">Longevity Noodles</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Chocolate_Omnomberry_Cream">Chocolate Omnomberry Cream</a></td>
-            <td>Nudeln (während Mondneujahr),<br/>Schokocreme (mit aktivem Segen)</td>
+            <td>Noodles (during Lunar New Year),<br/>Chocolate Cream (with active boons)</td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">30</td>
             <td><img src="https://wiki.guildwars2.com/images/e/ee/Sharpening_Skull.png"/><img src="https://wiki.guildwars2.com/images/7/71/Flask_of_Pumpkin_Oil.png"/><img src="https://wiki.guildwars2.com/images/8/8f/Lump_of_Crystallized_Nougat.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Sharpening_Skull">Sharpening Skull</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Flask_of_Pumpkin_Oil">Flask of Pumpkin Oil</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lump_of_Crystallized_Nougat">Lump of Crystallized_Nougat</a></td>
-            <td>Nudeln geben vollen Buff nur während Mondneujahr,<br/>Schokocreme nur mit aktivem Segen</td>
+            <td></td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">10</td>
             <td><img src="https://wiki.guildwars2.com/images/f/f3/Lucky_Draketail.png"/><img src="https://wiki.guildwars2.com/images/7/7d/Lucky_New_Year_Firework.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Lucky_Draketail">Lucky Draketail</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_New_Year_Firework">Lucky New Year Firework</a></td>
-            <td>Hält nur 5 Minuten, direkt mehrere zünden!</td>
+            <td>Only last for 5 minutes, use multiple to stack duration</td>
           </tr>
-          <tr><td colspan="5">Booster (accountgebunden)</td></tr>
+          <tr><td colspan="5">Booster (account bound)</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">100</td>
@@ -141,14 +142,14 @@
             <td class="value">100</td>
             <td><img src="https://wiki.guildwars2.com/images/a/a4/Black_Lion_Booster.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Black_Lion_Booster">Black Lion Booster</a></td>
-            <td>Erhältlich für Statuetten</td>
+            <td>Available for <a href="https://wiki.guildwars2.com/wiki/Black_Lion_Statuette">Black Lion Statuettes</a></td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">50</td>
             <td><img src="https://wiki.guildwars2.com/images/b/b6/Magic_Find_Booster.png"/><img src="https://wiki.guildwars2.com/images/4/4d/Communal_Boost_Bonfire.png"/><img src="https://wiki.guildwars2.com/images/3/3e/Dragon%27s_Fortune_Fireworks.png"/><img src="https://wiki.guildwars2.com/images/9/9d/Hallows_Fortune_Fireworks.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Magic_Find_Booster">Magic Find Booster</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Communal_Boost_Bonfire">Communal Boost Bonfire</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Dragon%27s_Fortune_Fireworks">Dragon's Fortune Fireworks</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Hallows_Fortune_Fireworks">Hallows Fortune Fireworks</a></td>
-            <td>Lagerfeuer und Feuerwerke können für mehrere Leute verwendet werden</td>
+            <td>Bonfires and Fireworks can be used to buff multiple people</td>
           </tr>
           <tr>
             <td><input type="checkbox"/></td>
@@ -164,10 +165,10 @@
         <tbody>
           <tr>
             <td class="col-1"></td>
-            <td class="col-2" id="sumValue"></td>
+            <td class="col" id="sumValue"></td>
             <td class="col-1">%</td>
-            <td class="col-4">Summe</td>
-            <td class="col-4">Kein Mehrwert über 750%!</td>
+            <td class="col">Sum</td>
+            <td class="col">No added value above 750%</td>
           </tr>
         </tbody>
       </table>
