--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <p class="info">
       <u>
-        <b>Important note for Lunar New Year 2023:</b>
+        <b>Note for Lunar New Year 2023:</b>
       </u>
       <br>
       Magic Find is capped to 750% since 2022-02-28 [
     <a href="https://wiki.guildwars2.com/wiki/Game_updates/2022-02-28#General_2">source</a>
     ]
   </p>
-  <p>You might be able to save yourself from purchasing expensive Boosters like "Black Lion Booster" or getting tedious buffs like "Enlightenment"!</p>
+  <p>You might reach the 750% limit without expensive Boosters like "Black Lion Booster" or getting tedious buffs like "Enlightenment"!</p>
 </div>
 
     <table id="mainTable" class="table table-striped">
@@ -161,7 +161,7 @@
         </tbody>
       </table>
 
-      <table id="footer" class="bg-secondary text-light">
+      <table id="footer" class="bg-dark text-light border-secondary">
         <tbody>
           <tr>
             <td class="col-1"></td>
