--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
     <h1>Magic Find Checklist</h1>
 
-    <p>Interactive version based of the <a href="https://wiki.guildwars2.com/wiki/Magic_Find#Maximizing_magic_find">wiki list</a>.</p>
+    <p>Interactive version based off the <a href="https://wiki.guildwars2.com/wiki/Magic_Find#Maximizing_magic_find">wiki list</a>.</p>
 
     <p class="info">
       <u>
