--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Lucky_Draketail">Lucky Draketail</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_New_Year_Firework">Lucky New Year Firework</a></td>
             <td>Only last for 5 minutes, use multiple to stack duration</td>
           </tr>
-          <tr><td colspan="5">Booster (account bound)</td></tr>
+          <tr><td colspan="5">Boosters (account bound)</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">100</td>
