--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <tbody>
           <tr>
             <td class="col-1"></td>
-            <td class="col" id="sumValue"></td>
+            <td class="col-1" id="sumValue"></td>
             <td class="col-1">%</td>
             <td class="col">Sum</td>
             <td class="col">No added value above 750%</td>
