--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <b>Note for Lunar New Year 2023:</b>
       </u>
       <br>
-      Magic Find is capped to 750% since 2022-02-28 [
-    <a href="https://wiki.guildwars2.com/wiki/Game_updates/2022-02-28#General_2">source</a>
-    ]
+      Magic Find is capped to 750% since 2022-02-28 [<a href="https://wiki.guildwars2.com/wiki/Game_updates/2022-02-28#General_2">source</a>]
   </p>
   <p>You might reach the 750% limit without expensive Boosters like "Black Lion Booster" or getting tedious buffs like "Enlightenment"!</p>
 </div>
@@ -44,8 +42,8 @@
             <td><input type="checkbox" disabled="true" checked="true"/></td>
             <td><input type="number" value="0" min="0" max="350" onClick="this.select();"/></td>
             <td><img src="https://wiki.guildwars2.com/images/9/94/Magic_Find_%28account_bonus%29.png"/></td>
-            <td><a href="https://wiki.guildwars2.com/wiki/Account_bonus">Achievement Rewards & Luck</a></td>
-            <td>typically 0-36% + 0-300%</td>
+            <td><a href="https://wiki.guildwars2.com/images/e/e9/Account_Bonuses.jpg">Account Bonuses</a></td>
+            <td>Magic Find value in the "Achievements" tab of the Hero Panel [H]</td>
           </tr>
           <tr><td colspan="5">Festival</td></tr>
           <tr>
@@ -55,7 +53,7 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Memories_of_Home">Memories of Home</a></td>
             <td>Active during Lunar New Year festival</td>
           </tr>
-          <tr><td colspan="5">Preparation</td></tr>
+          <tr><td colspan="5">Preparations</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">20</td>
@@ -77,7 +75,7 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Enlightenment">Enlightenment</a></td>
             <td>Buff from completing <a href="https://wiki.guildwars2.com/wiki/Monastery_Training">Monastery Training</a> Renown Heart</td>
           </tr>
-          <tr><td colspan="5">Map Event Bonus</td></tr>
+          <tr><td colspan="5">Map Event Bonuses</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">200</td>
@@ -85,7 +83,7 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Perseverance">Perseverance</a> &<br/><a href="https://wiki.guildwars2.com/wiki/Hero_of_the_Wastes">Hero of the Wastes</a></td>
             <td>Silverwastes Buffs<br/>5 x 30% + 50%</td>
           </tr>
-          <tr><td colspan="5">Banner</td></tr>
+          <tr><td colspan="5">Banners</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">15</td>
