--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <td><a href="https://wiki.guildwars2.com/wiki/Spirit_Banner_Boost">Spirit Banner Boost</a></td>
             <td>Spirit Banner</td>
           </tr>
-          <tr><td colspan="5">Consumables (available at Trading Post)</td></tr>
+          <tr><td colspan="5">Consumables (most available at Trading Post)</td></tr>
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">40</td>
@@ -116,9 +116,9 @@
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">10</td>
-            <td><img src="https://wiki.guildwars2.com/images/f/f3/Lucky_Draketail.png"/><img src="https://wiki.guildwars2.com/images/7/7d/Lucky_New_Year_Firework.png"/></td>
-            <td><a href="https://wiki.guildwars2.com/wiki/Lucky_Draketail">Lucky Draketail</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_New_Year_Firework">Lucky New Year Firework</a></td>
-            <td>Only last for 5 minutes, use multiple to stack duration</td>
+            <td><img src="https://wiki.guildwars2.com/images/2/2b/Lucky_Firecracker.png"/><img src="https://wiki.guildwars2.com/images/f/f3/Lucky_Draketail.png"/><img src="https://wiki.guildwars2.com/images/7/7d/Lucky_New_Year_Firework.png"/></td>
+            <td><a href="https://wiki.guildwars2.com/index.php?title=Lucky_Firecracker">Lucky Firecracker</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_Draketail">Lucky Draketail</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_New_Year_Firework">Lucky New Year Firework</a></td>
+            <td>Some fireworks only last for 5 minutes, use multiple to stack duration</td>
           </tr>
           <tr><td colspan="5">Boosters (account bound)</td></tr>
           <tr>
