--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
         </tbody>
       </table>
 
+      <div id="copyright">© henahax.de 2023</div>
+
       <table id="footer" class="bg-dark text-light border-secondary">
         <tbody>
           <tr>
