--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <tr>
             <td><input type="checkbox"/></td>
             <td class="value">10</td>
-            <td><img src="https://wiki.guildwars2.com/images/2/2b/Lucky_Firecracker.png"/><img src="https://wiki.guildwars2.com/images/f/f3/Lucky_Draketail.png"/><img src="https://wiki.guildwars2.com/images/7/7d/Lucky_New_Year_Firework.png"/></td>
+            <td><img src="https://wiki.guildwars2.com/images/f/f3/Lucky_Draketail.png"/><img src="https://wiki.guildwars2.com/images/7/7d/Lucky_New_Year_Firework.png"/></td>
             <td><a href="https://wiki.guildwars2.com/wiki/Lucky_Draketail">Lucky Draketail</a> /<br/><a href="https://wiki.guildwars2.com/wiki/Lucky_New_Year_Firework">Lucky New Year Firework</a></td>
             <td>Some fireworks only last for 5 minutes, use multiple to stack duration</td>
           </tr>
